test/error/do-malformed-binding.scm
;; do: malformed binding
(do ((a . 1))
    (#t #f)
  #f)
